--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 听土拨鼠的碎碎念
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+  <h1 class="pageTitle">Posts</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
